--- a/index.html
+++ b/index.html
@@ -5,55 +5,100 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
   <title>Frontend Mentor | Loopstudios landing page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
+  <div class="container">
+  
+    <div class="menu">
   About
   Careers
   Events
   Products
   Support
+</div>
 
-  Immersive experiences that deliver
+  <h1>
+    Immersive experiences that deliver
+  </h1>
 
+  <h2>
   The leader in interactive VR
-
+</h2>
+<p>
   Founded in 2011, Loopstudios has been producing world-class virtual reality 
   projects for some of the best companies around the globe. Our award-winning 
   creations have transformed businesses through digital experiences that bind 
   to their brand.
+</p>
 
+<div class="row">
+  <div class="col-8">
+<h4>
   Our creations
-
+</h4>
+</div>
+<div class="col-4">
+<button class="btn btn-light">
   See all
+</button>
+</div>
+</div>
 
+<div class="row">
+  <div class="col-3">
   Deep earth
+</div>
+<div class="col-3">
   Night arcade
+</div>
+<div class="col-3">
   Soccer team VR
+</div>
+<div class="col-3">
   The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
+</div>
+</div>
 
+<div class="row">
+  <div class="col-3">
+    From up above VR
+</div>
+<div class="col-3">
+  Pocket borealis
+</div>
+<div class="col-3">
+  The curiosity
+</div>
+<div class="col-3">
+  Make it fisheye
+</div>
+</div>
+
+<div class="footer">
+  <div class="row">
+    <div class="col-7">
   About
   Careers
   Events
   Products
   Support
+</div>
 
+<div class="col-4">
   © 2021 Loopstudios. All rights reserved.
-
+</div>
+</div>
+</div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+</div>
 </body>
 </html>
