--- a/index.html
+++ b/index.html
@@ -14,18 +14,37 @@
 </head>
 <body>
   <div class="container">
+    <div class="header">
+    <div class="row">
+        <h6 class="brand">
+        loopstudios
+      </h6>
   
     <div class="menu">
-  About
-  Careers
-  Events
-  Products
-  Support
+    <span>
+      About
+    </span>
+    <span>
+      Careers
+    </span>
+    <span>
+      Events
+    </span>
+    <span>
+      Products
+    </span>
+    <span>
+      Support
+    </span>
+</div>
 </div>
 
-  <h1>
-    Immersive experiences that deliver
+  <h1 class="title">
+    Immersive experiences 
+    <br/>
+     that deliver
   </h1>
+</div>
 
   <h2>
   The leader in interactive VR
