Relevant id's added, mid-section styled with CSS

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
   </h1>
 </div>
 
+<img 
+src="desktop/image-interactive.jpg"
+width=50%
+class="vr-headset"/>
+<div class="mid-section">
   <h2>
   The leader in interactive VR
 </h2>
@@ -55,7 +60,9 @@
   creations have transformed businesses through digital experiences that bind 
   to their brand.
 </p>
+</div>
 
+<div class="creations-header">
 <div class="row">
   <div class="col-8">
 <h4>
@@ -66,6 +73,7 @@
 <button class="btn btn-light">
   See all
 </button>
+</div>
 </div>
 </div>
 
