--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <div class="container">
+    
     <div class="header">
     <div class="row">
         <h6 class="brand">
@@ -48,7 +49,6 @@
 
 <img 
 src="desktop/image-interactive.jpg"
-width=50%
 class="vr-headset"/>
 <div class="mid-section">
   <h2>
@@ -65,12 +65,12 @@ class="vr-headset"/>
 <div class="creations-header">
 <div class="row">
   <div class="col-8">
-<h4>
+<h2>
   Our creations
-</h4>
+</h2>
 </div>
 <div class="col-4">
-<button class="btn btn-light">
+<button class="see-all-button">
   See all
 </button>
 </div>
@@ -78,32 +78,82 @@ class="vr-headset"/>
 </div>
 
 <div class="row">
-  <div class="col-3">
-  Deep earth
+  <div class="flex-gap">
+
+  <div class="deep-earth">
+  <div class="col-3" class="first-row-column">
+    <img 
+    src="desktop/image-deep-earth.jpg"
+    class="deep-earth-img" />
+  <h2>
+    Deep earth
+  </h2>
 </div>
-<div class="col-3">
-  Night arcade
 </div>
-<div class="col-3">
-  Soccer team VR
+<div class="night-arcade">
+<div class="col-3" class="first-row-column">
+  <img src="desktop/image-night-arcade.jpg"
+  class="night-arcade-img"/>
+  <h2>
+    Night arcade
+  </h2>
 </div>
-<div class="col-3">
+</div>
+<div class="soccer-team-vr">
+<div class="col-3" class="first-row-column">
+  <img src="desktop/image-soccer-team.jpg"
+  class="soccer-team-img"/>
+  <h2>
+    Soccer team VR
+  </h2>
+</div>
+</div>
+<div class="the-grid">
+<div class="col-3" class="first-row-column">
+  <img src="desktop/image-grid.jpg"
+  class="grid-img"/>
+  <h2>
   The grid
+  </h2>
+</div>
+</div>
 </div>
 </div>
 
 <div class="row">
-  <div class="col-3">
-    From up above VR
+  <div class="flex-gap">
+    <div class="up-above">
+  <div class="col-3" class="first-row-column">
+    <img src="desktop/image-from-above.jpg"/>
+    <h2>
+      From up above VR
+    </h2>
+  </div>
 </div>
-<div class="col-3">
+<div class="pocket-borealis">
+<div class="col-3" class="first-row-column">
+  <img src="desktop/image-pocket-borealis.jpg"/>
+<h2>
   Pocket borealis
+</h2>
 </div>
-<div class="col-3">
-  The curiosity
 </div>
-<div class="col-3">
-  Make it fisheye
+<div class="curiosity">
+<div class="col-3" class="first-row-column">
+  <img src="desktop/image-curiosity.jpg"/>
+  <h2>
+    The curiosity
+  </h2>
+  </div>
+</div>
+<div class="fisheye">
+<div class="col-3" class="first-row-column">
+  <img src="desktop/image-fisheye.jpg"/>
+  <h2>
+    Make it fisheye
+  </h2>
+  </div>
+</div>
 </div>
 </div>
 
