footer designed in CSS

--- a/index.html
+++ b/index.html
@@ -158,23 +158,42 @@ class="vr-headset"/>
 </div>
 
 <div class="footer">
-  <div class="row">
-    <div class="col-7">
-  About
-  Careers
-  Events
-  Products
-  Support
-</div>
 
-<div class="col-4">
+  <div class="brand">
+  <div class="row">
+    <h5>
+      loopstudios
+    </h5>
+  </div>
+  </div>
+
+    <span class="footer-menu">
+      <span>
+        About
+      </span>
+      <span>
+        Careers
+      </span>
+      <span>
+        Events
+      </span>
+      <span>
+        Products
+      </span>
+      <span>
+        Support
+      </span>
+</span>
+ 
+<br/>
+<span class="copyright">
   © 2021 Loopstudios. All rights reserved.
-</div>
+</span>
 </div>
 </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/D-aisy">Daisy Cowley</a>.
   </div>
 </div>
 </body>
